--- a/Fuzzy-details.html
+++ b/Fuzzy-details.html
@@ -72,7 +72,7 @@
 
 </p></li>
                 <li><strong>Tools</strong>: Python</li>
-                <li><strong>Code</strong>: <a href="https://github.com/maedemir/Fuzzy-Expert-System-for-Heart-Disease-Diagnosis">GitHub Repository</a></li>
+                <li><strong>Code</strong>: <a href="https://github.com/maedemir/Fuzzy-Expert-System-for-Heart-Disease-Diagnosis"target="_blank">GitHub Repository</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
