--- a/Snail-jumper-details.html
+++ b/Snail-jumper-details.html
@@ -73,7 +73,7 @@
                      Implementation of a neuroevolution algorithm for a simple game
                   </p></li>
                 <li><strong>Tools</strong>: Python</li>
-                <li><strong>Code</strong>: <a href="https://github.com/maedemir/Snail-Jumper">GitHub Repository</a></li>
+                <li><strong>Code</strong>: <a href="https://github.com/maedemir/Snail-Jumper" target="_blank">GitHub Repository</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
