--- a/ai-details.html
+++ b/ai-details.html
@@ -73,7 +73,7 @@
                 <li><strong>Description</strong>: Implementation of several search algorithms, multiagent minimax and expectimax algorithms, alpha-beta
 pruning, model-based and model-free reinforcement learning algorithms inside the Pacman world</li>
                 <li><strong>Tools</strong>: Python</li>
-                <li><strong>Code: </strong> <a href="https://github.com/maedemir/Pac-Man-AI-Projects">GitHub Repository</a></li>
+                <li><strong>Code: </strong> <a href="https://github.com/maedemir/Pac-Man-AI-Projects"  target="_blank">GitHub Repository</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
