--- a/codet-details.html
+++ b/codet-details.html
@@ -76,7 +76,7 @@
               <ul>
                 <li><strong>Description</strong>:App-Based COVID19 detection using CT and XRay images</li>
                 <li><strong>Tools</strong>: TensorFlow, sklearn, Flask, HTML, CSS, Numpy, Matplotlib</li>
-                <li><strong>Code: </strong> <a href="https://github.com/maedemir/CoDet">GitHub Repository</a></li>
+                <li><strong>Code: </strong> <a href="https://github.com/maedemir/CoDet" target="_blank">GitHub Repository</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
