--- a/database-details.html
+++ b/database-details.html
@@ -75,7 +75,7 @@
 
 </p></li>
                 <li><strong>Tools</strong>: MySQL, Python</li>
-                <li><strong>Code</strong>: <a href="https://github.com/maedemir/Fuzzy-Expert-System-for-Heart-Disease-Diagnosis">GitHub Repository</a></li>
+                <li><strong>Code</strong>: <a href="https://github.com/maedemir/Database-System-for-E-learning-management-system" target="_blank">GitHub Repository</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
