--- a/iot-details.html
+++ b/iot-details.html
@@ -40,7 +40,7 @@
   <main id="main">
 
     <!-- ======= Portfolio Details Section ======= -->
-    <section id="CIFAR-details" class="CIFAR-details">
+    <section id="codet-details" class="codet-details">
       <div class="container">
 
         <div class="row gy-4">
@@ -50,15 +50,17 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/nn-structure.png" alt="" width="600"  height="600">
+                  <img src="assets/img/portfolio/iot1.png" alt="" width="500"  height="500">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/nn-stochastic.png" alt="" width="600"  height="600">
+                  <img src="assets/img/portfolio/iot2.png" alt="" width="500"  height="500">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Nn-res.png" alt="" width="600"  height="600">
+                  <img src="assets/img/portfolio/iot3.png" alt="" width="500"  height="500">
                 </div>
-
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/iot4.png" alt="" width="500"  height="500">
+                </div>
               </div>
               <div class="swiper-pagination"></div>
             </div>
@@ -68,20 +70,17 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                  <li><strong>Description:</strong> <p >Implementation of an image classification algorithm using pure python and fully connected nural networks from scratch!</p></li>
-                <li><strong>Tools</strong>: Python, Google Colab</li>
-                <li><strong>Code</strong>: <a href="https://github.com/maedemir/CIFAR-10-image-classification-using-fully-connected-NN" target="_blank">GitHub Repository</a></li>
+                <li><strong>Description</strong>:IoT applications</li>
+                <li><strong>Tools</strong>:Arduino, Proteus, IoT</li>
+                <li><strong>Code: </strong> <a href="https://github.com/maedemir/maedemir-Internet-of-Things" target="_blank">GitHub Repository</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Project Summery</h2>
               <p style="text-align:justify">
-                    One of the applications of neural networks is classification. In this project, we are going to categorize images. We want to use different neural networks (specifically fully
-                    networks connected) Let's build a model that takes photos as input and recognizes the category of each photo.
+                In this course I learned to use differente IOT consepts in real world applications.
               </p>
-              <p style="text-align:justify">
-                  In this problem, we want to classify the images of the CIFAR-10 dataset. This dataset is a smaller version of the CIFAR-100 dataset, limited to images from 10 different categories. To reduce the computational complexity, we only use the images of the first four classes of this dataset. The dimensions of the images in this dataset are equal to 32 (length) by 32 (width) by 3 (RGB color channels).
-              </p>
+        
             </div>
           </div>
 
