--- a/java-details.html
+++ b/java-details.html
@@ -76,7 +76,7 @@
               <ul>
                   <li><strong>Description:</strong> <p>Implementation of the famous plants vs zombies game from scratch using java and object-oriented programming</p></li>
                 <li><strong>Tools</strong>: Java, javax swing</li>
-                <li><strong>Code</strong>: <a href="https://github.com/maedemir/Plants-vs-Zombies">GitHub Repository</a></li>
+                <li><strong>Code</strong>: <a href="https://github.com/maedemir/Plants-vs-Zombies" target="_blank">GitHub Repository</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
