--- a/projects.html
+++ b/projects.html
@@ -87,7 +87,6 @@
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
-
           <div class="col-lg-4 col-md-6 portfolio-item filter-AI">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/codet.gif" class="img-fluid" alt="">
@@ -99,8 +98,9 @@
                 </div>
               </div>
             </div>
-          </div>
-           <div class="col-lg-4 col-md-6 portfolio-item filter-AI">
+        </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-AI">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/pacman.gif" class="img-fluid" alt="" >
               <div class="portfolio-info">
@@ -113,7 +113,7 @@
             </div>
           </div>
 
-    <div class="col-lg-4 col-md-6 portfolio-item filter-AI">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-AI">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/fuzzy.gif" class="img-fluid" alt="" >
               <div class="portfolio-info">
@@ -181,9 +181,33 @@
                 </div>
               </div>
             </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-other">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/whale-docker.gif" class="img-fluid" alt="" style="width: 450px; height: 350px;" >
+              <div class="portfolio-info">
+                <h4>Crypto Server</h4>
+                <p>Cloud Computing</p>
+                <div class="portfolio-links">
+                  <a href="crypto-server.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details" style="font-size:20px ;"><i class="bx bx-link"></i>Details</a>
+                </div>
+              </div>
+            </div>
           </div>
 
-
+          <div class="col-lg-4 col-md-6 portfolio-item filter-other">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/iot.gif" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Internet of Things Projects</h4>
+                <p>IOT</p>
+                <div class="portfolio-links">
+                  <a href="iot-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details" style="font-size:20px ;"><i class="bx bx-link"></i>Details</a>
+                </div>
+              </div>
+            </div>
+          </div>
 
         </div>
 
