--- a/education.html
+++ b/education.html
@@ -84,12 +84,29 @@
             <tr>
               <td  class="td_top " style="margin-left: 0px;">
                 <div class="resume-item" style="width: fit-content;height: fit-content">
+                <h4>M.Sc. in Bioinformatics</h4>
+                <h4><a href="https://www.bioinformatics.ubc.ca/">University of British Columbia</a></h4>
+                <h5>2018 - present | Tehran, Iran</h5>
+                <p style="font-size: 20px;"> Supervisor: Dr. Ali Bashashati<a href="https://bmiai.ubc.ca/people/ali-bashashati">[homepage]</a> </p>
+                <p style="font-size: 20px;"> Graduate Research Assistant at AIMlab<a href="https://aimlab.ca/">[homepage]</a></p>
+                </p>
+              </div>
+            </td>
+
+              <td class="td_top" align="center"><img src="assets/img/ubc.png" class="floatRight" width="300" height="300"></td>
+            </tr>
+
+
+
+            <tr>
+              <td  class="td_top " style="margin-left: 0px;">
+                <div class="resume-item" style="width: fit-content;height: fit-content">
                 <h4>B.S. in Computer Engineering</h4>
                 <h4><a href="https://aut.ac.ir/">Amirkabir University of Technology</a></h4>
                 <h5>2018 - present | Tehran, Iran</h5>
   
                 <p style="font-size: 20px;">GPA: 4/4 (19.34/20.0 for Last 8 semesters)</p>
-                <p style="font-size: 20px;"> Advisor: Prof. Reza Safabakhsh<a href="https://aut.ac.ir/cv/2455/REZASAFABAKHSH">[homepage]</a> </p>
+                <p style="font-size: 20px;"> Advisor: Dr. Reza Safabakhsh<a href="https://aut.ac.ir/cv/2455/REZASAFABAKHSH">[homepage]</a> </p>
                 <p style="font-size: 20px;"> Major-related courses:</p>
                 <p>
                 <ul style="display: inline-block; font-size: 20px;">
