--- a/education.html
+++ b/education.html
@@ -85,6 +85,7 @@
               <td  class="td_top " style="margin-left: 0px;">
                 <div class="resume-item" style="width: fit-content;height: fit-content">
                 <h4>M.Sc. in Bioinformatics</h4>
+                <p style="font-size: 20px;">Average Grade: 91.7/100</p>
                 <h4><a href="https://www.bioinformatics.ubc.ca/">University of British Columbia</a></h4>
                 <h5>2018 - present | Tehran, Iran</h5>
                 <p style="font-size: 20px;"> Supervisor: Dr. Ali Bashashati<a href="https://bmiai.ubc.ca/people/ali-bashashati">[homepage]</a> </p>
