--- a/education.html
+++ b/education.html
@@ -87,7 +87,7 @@
                 <h4>M.Sc. in Bioinformatics</h4>
                 <p style="font-size: 20px;">Average Grade: 91.7/100</p>
                 <h4><a href="https://www.bioinformatics.ubc.ca/">University of British Columbia</a></h4>
-                <h5>2018 - present | Tehran, Iran</h5>
+                <h5>2023 - present | Vancouver, Canada</h5>
                 <p style="font-size: 20px;"> Supervisor: Dr. Ali Bashashati<a href="https://bmiai.ubc.ca/people/ali-bashashati">[homepage]</a> </p>
                 <p style="font-size: 20px;"> Graduate Research Assistant at AIMlab<a href="https://aimlab.ca/">[homepage]</a></p>
                 </p>
