--- a/education.html
+++ b/education.html
@@ -89,7 +89,7 @@
                 <h4><a href="https://www.bioinformatics.ubc.ca/">University of British Columbia</a></h4>
                 <h5>2023 - present | Vancouver, Canada</h5>
                 <p style="font-size: 20px;"> Supervisor: Dr. Ali Bashashati<a href="https://bmiai.ubc.ca/people/ali-bashashati">[homepage]</a> </p>
-                <p style="font-size: 20px;"> Graduate Research Assistant at AIMlab<a href="https://aimlab.ca/">[homepage]</a></p>
+                <p style="font-size: 20px;"> Graduate Research Assistant at UBC AIMlab<a href="https://aimlab.ca/">[homepage]</a></p>
                 </p>
               </div>
             </td>
