--- a/contact.html
+++ b/contact.html
@@ -71,9 +71,9 @@
         </div>
 
         <div>
-             <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1129.028828532597!2d51.407636226962865!3d35.703828052883196!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3f8e010d1bda6451%3A0xb68840e07e8e513!2sComputer%20Engineering%20Department!5e0!3m2!1sen!2s!4v1661751720446!5m2!1sen!2s" frameborder="0" allowfullscreen></iframe>
+             <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d41663.107042043615!2d-123.27264856564953!3d49.25850372535382!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x548672cdc6fced07%3A0xb084ebb8a78d14f8!2sUBC%2C%20University%20Endowment%20Lands%2C%20BC!5e0!3m2!1sen!2sca!4v1706119984983!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" frameborder="0" allowfullscreen></iframe>
         </div>
-
+        
         <div class="row mt-5">
 
           <div class="col-lg-4">
@@ -81,19 +81,13 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Amirkabir University of Technology, Tehran, Iran</p>
+                <p>University of British Columbia, Vancouver, BC, Canada</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>maedemir@aut.ac.ir</p>
-              </div>
-
-              <div class="phone">
-                <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
-                <p>+98 9901826822</p>
+                <p>maedeh.mirzazadeh@ubc.ca</p>
               </div>
 
             </div>
